[gd_scene load_steps=5 format=3 uid="uid://befyjavmkf8n2"]

[ext_resource type="Script" uid="uid://b0x8twtheq5q6" path="res://스테이지1/Scenes/big_bullet.gd" id="1_cukqg"]
[ext_resource type="PackedScene" uid="uid://dklv866qo11ma" path="res://스테이지1/big_explosion.tscn" id="2_losm3"]
[ext_resource type="Texture2D" uid="uid://dqyx26x27bsfo" path="res://캐릭터/tank_bullet3.png" id="3_losm3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6vwr0"]
size = Vector2(112, 50)

[node name="BigBullet" type="RigidBody2D"]
position = Vector2(4, 0)
collision_layer = 16
collision_mask = 3
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_cukqg")
explosion_scene = ExtResource("2_losm3")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0.99999994)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_losm3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(0.86796963, 0.553339)
shape = SubResource("RectangleShape2D_6vwr0")

[node name="CollisionEnableTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CollisionEnableTimer" to="." method="_on_collision_enable_timer_timeout"]
